ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
    cert-manager.io/cluster-issuer: ${FOREX_ALERT_LET_ENCRYPT}
  name: nginx
  namespace: ${FOREX_ALERT_NAMESPACE}
spec:
  tls:
    - hosts:
        - ${FOREX_ALERT_HOST}
      secretName: ${FOREX_ALERT_SECRET_NAME}
  rules:
    - host: ${FOREX_ALERT_HOST}
      http:
        paths:
          - path: /backend/(.*)
            pathType: Prefix
            backend:
              service:
                name: forex-alert-backend-service
                port:
                  number: 5000
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: forex-alert-frontend-service
                port:
                  number: 3000
